# libkxi

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
app/: CMakeLists.txt  main.cpp
cmake/: FormatTools.cmake  ProjectCoverage.cmake  ProjectSanitizers.cmake  TidyTools.cmake
include/: CMakeLists.txt  tuple.hpp  type_list.hpp  utility.hpp
include/libkxi/: compact_tuple.hpp  ctuple.hpp  heterogeneous.hpp  meta.hpp  sorted_tuple.hpp  traits.hpp  tuple.hpp  type_list.hpp  types.hpp  utility.hpp
include/libkxi/compact_tuple/: concepts.hpp  core.hpp
include/libkxi/compact_tuple_details/: concepts.hpp  core.hpp
include/libkxi/ctuple_details/: concepts.hpp  fwd.hpp
include/libkxi/heterogeneous/: concepts.hpp  core.hpp  sort.hpp
include/libkxi/meta/: concepts.hpp  core.hpp  pack.hpp  sort.hpp
include/libkxi/sorted_tuple/: concepts.hpp  core.hpp
include/libkxi/sorted_tuple_details/: concepts.hpp  core.hpp  fwd.hpp
include/libkxi/tuple/: compact.hpp  concepts.hpp  core.hpp  core_details.hpp  flat.hpp  fwd.hpp  helpers.hpp  like.hpp  ops.hpp  ops_details.hpp  sorted.hpp
include/libkxi/tuple/compact/: concepts.hpp  core.hpp  ops.hpp
include/libkxi/tuple/flat/: concepts.hpp  core.hpp  core_details.hpp  fwd.hpp  helpers.hpp  ops.hpp
include/libkxi/tuple/like/: concepts.hpp  ops.hpp  ops_details.hpp
include/libkxi/tuple/sorted/: concepts.hpp  core.hpp  fwd.hpp  ops.hpp
include/libkxi/tuple_details/: concepts.hpp  core.hpp  core_details.hpp  fwd.hpp  helpers.hpp  ops.hpp  ops_details.hpp
include/libkxi/tuple_like/: concepts.hpp
include/libkxi/type_list_details/: concepts.hpp  core.hpp  fwd.hpp  sort.hpp  tuple_ops.hpp
include/libkxi/utility/: core.hpp
include/libkxi/utility_details/: core.hpp  core_details.hpp
include/tuple_details/: tuple_concepts.hpp  tuple_core.hpp  tuple_core_details.hpp  tuple_fwd.hpp  tuple_helpers.hpp  tuple_ops.hpp  tuple_ops_details.hpp
include/type_list_details/: type_list_concepts.hpp  type_list_core.hpp
include/utility_details/: utility_core.hpp
tests/: CMakeLists.txt
tests/static/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/compact_tuple/: CMakeLists.txt  core.cpp
tests/unit/sorted_tuple/: CMakeLists.txt  concepts.cpp  core.cpp  ops.cpp  qualifiers.cpp
tests/unit/tuple/: CMakeLists.txt  concepts.cpp  constexpr.cpp  core.cpp  layout.cpp  move_count.cpp  ops.cpp  qualifiers.cpp
tests/unit/type_list/: CMakeLists.txt  concepts.cpp  core.cpp  ops.cpp  pack.cpp  sort.cpp  tuple_ops.cpp
tests/unit/utility/: CMakeLists.txt  core.cpp
