if(LIBKXI_ENABLE_FORMAT_CHECK)
  include(FormatTools)
  if(CLANG_FORMAT_EXE)
    message(STATUS "Format Check enabled. Found Clang-Format: ${CLANG_FORMAT_EXE}")
  else()
    message(WARNING "Format Check requested (LIBKXI_ENABLE_FORMAT_CHECK=ON) but Clang-Format was NOT found. Check will be disabled.")
    set(LIBKXI_ENABLE_FORMAT_CHECK OFF CACHE INTERNAL "")
  endif()
endif()

if(LIBKXI_ENABLE_TIDY_CHECK)
  include(TidyTools)
  if(CLANG_TIDY_EXE)
    message(STATUS "Tidy Check enabled. Found Clang-Tidy: ${CLANG_TIDY_EXE}")
  else()
    message(WARNING "Tidy Check requested (LIBKXI_ENABLE_TIDY_CHECK=ON) but Clang-Tidy was NOT found. Check will be disabled.")
    set(LIBKXI_ENABLE_TIDY_CHECK OFF CACHE INTERNAL "")
  endif()
endif()

include(GtestTools)
if(GTest_FOUND)
  message(STATUS "Unit tests enabled. Found GTest module")
else()
  message(WARNING "GTest requested (LIBKXI_BUILD_TESTS=ON) but GTest was NOT found. Unit tests will be disabled.")
endif()

if(LIBKXI_ENABLE_FORMAT_CHECK OR LIBKXI_ENABLE_TIDY_CHECK)
  add_subdirectory(static)
endif()

if(GTest_FOUND)
  add_subdirectory(unit)
endif()
